manifests/flyingdutchmanserv/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flyingdutchmanserv-service
  namespace: pirates
  labels:
    app: flyingdutchmanserv-service
spec:
  selector:
    app: flyingdutchmanserv-service
  ports:
  - port: 9095
    name: http
  type: ClusterIP
